@startuml

class CheckPerformanceIndicatorsUI {
}

class CheckPerformanceIndicatorsController {
    +getOrganizations()
    +determinatePayOrg()
    +determinatePayPlatform()
    +calcMeanPayment()
    +calcDeviationPayment()
    +determinateDelayOrg()
    +determinateDelayPlatform()
    +calcMeanDelay()
    +calcDeviationDelay()
    +determinateNormalDistribution()
}

class Platform {
    -String designation
    +getOrganizationsRecord(
}


class OrganizationsRecord {
    +getOrganizations()
    +determinatePayPlatform()
    +determinateDelayPlatform()
    +calcMeanPayment(mapTotalPayments)
    +calcDeviationPayment(mapTotalPayments,mapMeanPayments)
    +calcMeanDelay(mapTotalDelays)
    +calcDeviationDelay(mapTotalDelays,mapMeanDelays)
    +determinateNormalDistribution()
}

class Organization {
    -String name
    -String NIF
    +determinateDelayOrg(mapTotalDelays)
    +determinatePayOrg(mapTotalPayments)
    +calcCounterDelays()
}

 
class PaymentTransactionList{
    +getPaymentTransactions()
}

 
class PaymentTransaction {
    -String id
    -Date endDate
    -Double delay
    -String workQualityDescription
    +getM_oFreelancer()
    +getM_oTask()
    +generatePayAmount(task,free)
}

class Freelancer {
    -String id
    -String name
    -String expertiseLevel
    -String email
    -String NIF
    -String IBAN
    -String address
    -String country
    +getId()
}

class Task {
  -String id
  -String briefDescription
  -Integer timeDuration
  -Double costPerHour
  -String taskCategory
}

CheckPerformanceIndicatorsUI ..> CheckPerformanceIndicatorsController
CheckPerformanceIndicatorsController ..> Platform
CheckPerformanceIndicatorsController ..> OrganizationsRecord
CheckPerformanceIndicatorsController ..> Organization


Platform "1" -- "1" OrganizationsRecord : has >
OrganizationsRecord "1" -- "*" Organization : has >
Organization "1" -- "1" PaymentTransactionList : has >
PaymentTransactionList "1" -- "*" PaymentTransaction : has registries of >
PaymentTransaction "1" --> "1" Freelancer : relates to
PaymentTransaction "1" --> "1" Task : relates to
Task "1..*" --> "1" Freelancer : is assigned to

@enduml